// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfilePageFilterBar - Snapshots > matches snapshot with custom items 1`] = `
<div
  class="hidden h-fit w-(--filter-bar-width) flex-col self-start lg:flex sticky top-(--header-height)"
  data-testid="container"
>
  <div
    class="flex flex-col gap-0"
    data-testid="container"
  >
    <button
      aria-pressed="true"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-foreground m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-notifications"
        data-testid="container"
      >
        <span>
          Icon
        </span>
        <span
          class=""
        >
          Notifications
        </span>
      </div>
      <span
        class="text-base font-medium text-foreground"
        data-cy="profile-filter-item-notifications-count"
        data-testid="typography"
      >
        10
      </span>
    </button>
  </div>
</div>
`;

exports[`ProfilePageFilterBar - Snapshots > matches snapshot with loading state (no stats) 1`] = `
<div
  class="hidden h-fit w-(--filter-bar-width) flex-col self-start lg:flex sticky top-(--header-height)"
  data-testid="container"
>
  <div
    class="flex flex-col gap-0"
    data-testid="container"
  >
    <button
      aria-pressed="true"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-foreground m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-notifications"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bell h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.268 21a2 2 0 0 0 3.464 0"
          />
          <path
            d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
          />
        </svg>
        <span
          class=""
        >
          Notifications
        </span>
      </div>
      <div
        aria-label="Loading"
        class="animate-spin rounded-full border-b-2 border-brand size-4"
        data-testid="spinner"
        role="status"
      />
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-posts"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </div>
      <div
        aria-label="Loading"
        class="animate-spin rounded-full border-b-2 border-brand size-4"
        data-testid="spinner"
        role="status"
      />
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-replies"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-circle h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719"
          />
        </svg>
        <span
          class=""
        >
          Replies
        </span>
      </div>
      <div
        aria-label="Loading"
        class="animate-spin rounded-full border-b-2 border-brand size-4"
        data-testid="spinner"
        role="status"
      />
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-followers"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users-round h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 21a8 8 0 0 0-16 0"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"
          />
        </svg>
        <span
          class=""
        >
          Followers
        </span>
      </div>
      <div
        aria-label="Loading"
        class="animate-spin rounded-full border-b-2 border-brand size-4"
        data-testid="spinner"
        role="status"
      />
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-following"
        data-testid="container"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="24"
          viewBox="0 0 20 20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.00016 17.5C5.00016 15.7319 5.70254 14.0362 6.95278 12.786C8.20303 11.5357 9.89872 10.8333 11.6668 10.8333M11.6668 10.8333C13.4349 10.8333 15.1306 11.5357 16.3809 12.786C17.6311 14.0362 18.3335 15.7319 18.3335 17.5M11.6668 10.8333C9.36564 10.8333 7.50016 8.96785 7.50016 6.66667C7.50016 4.36548 9.36564 2.5 11.6668 2.5C13.968 2.5 15.8335 4.36548 15.8335 6.66667C15.8335 8.96785 13.968 10.8333 11.6668 10.8333ZM1.66679 16.6666C1.66679 13.8583 3.33346 11.25 5.00012 9.99996C4.45227 9.58893 4.01419 9.0492 3.72465 8.42852C3.43511 7.80784 3.30303 7.12535 3.34011 6.44146C3.37719 5.75757 3.58227 5.09336 3.93723 4.50763C4.29218 3.92189 4.78605 3.43268 5.37512 3.08329"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <span
          class=""
        >
          Following
        </span>
      </div>
      <div
        aria-label="Loading"
        class="animate-spin rounded-full border-b-2 border-brand size-4"
        data-testid="spinner"
        role="status"
      />
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-friends"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart-handshake h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
          />
        </svg>
        <span
          class=""
        >
          Friends
        </span>
      </div>
      <div
        aria-label="Loading"
        class="animate-spin rounded-full border-b-2 border-brand size-4"
        data-testid="spinner"
        role="status"
      />
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-tagged"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-tag h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <span
          class=""
        >
          Tagged
        </span>
      </div>
      <div
        aria-label="Loading"
        class="animate-spin rounded-full border-b-2 border-brand size-4"
        data-testid="spinner"
        role="status"
      />
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-collections"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-library h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6 4 14"
          />
          <path
            d="M12 6v14"
          />
          <path
            d="M8 8v12"
          />
          <path
            d="M4 4v16"
          />
        </svg>
        <span
          class=""
        >
          Collections
        </span>
      </div>
      <div
        aria-label="Loading"
        class="animate-spin rounded-full border-b-2 border-brand size-4"
        data-testid="spinner"
        role="status"
      />
    </button>
  </div>
</div>
`;

exports[`ProfilePageFilterBar - Snapshots > matches snapshot with stats 1`] = `
<div
  class="hidden h-fit w-(--filter-bar-width) flex-col self-start lg:flex sticky top-(--header-height)"
  data-testid="container"
>
  <div
    class="flex flex-col gap-0"
    data-testid="container"
  >
    <button
      aria-pressed="true"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-foreground m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-notifications"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bell h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.268 21a2 2 0 0 0 3.464 0"
          />
          <path
            d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
          />
        </svg>
        <span
          class=""
        >
          Notifications
        </span>
      </div>
      <span
        class="text-base font-medium text-foreground"
        data-cy="profile-filter-item-notifications-count"
        data-testid="typography"
      >
        2
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-posts"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-posts-count"
        data-testid="typography"
      >
        4
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-replies"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-circle h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719"
          />
        </svg>
        <span
          class=""
        >
          Replies
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-replies-count"
        data-testid="typography"
      >
        7
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-followers"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users-round h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 21a8 8 0 0 0-16 0"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"
          />
        </svg>
        <span
          class=""
        >
          Followers
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-followers-count"
        data-testid="typography"
      >
        115
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-following"
        data-testid="container"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="24"
          viewBox="0 0 20 20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.00016 17.5C5.00016 15.7319 5.70254 14.0362 6.95278 12.786C8.20303 11.5357 9.89872 10.8333 11.6668 10.8333M11.6668 10.8333C13.4349 10.8333 15.1306 11.5357 16.3809 12.786C17.6311 14.0362 18.3335 15.7319 18.3335 17.5M11.6668 10.8333C9.36564 10.8333 7.50016 8.96785 7.50016 6.66667C7.50016 4.36548 9.36564 2.5 11.6668 2.5C13.968 2.5 15.8335 4.36548 15.8335 6.66667C15.8335 8.96785 13.968 10.8333 11.6668 10.8333ZM1.66679 16.6666C1.66679 13.8583 3.33346 11.25 5.00012 9.99996C4.45227 9.58893 4.01419 9.0492 3.72465 8.42852C3.43511 7.80784 3.30303 7.12535 3.34011 6.44146C3.37719 5.75757 3.58227 5.09336 3.93723 4.50763C4.29218 3.92189 4.78605 3.43268 5.37512 3.08329"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <span
          class=""
        >
          Following
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-following-count"
        data-testid="typography"
      >
        27
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-friends"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart-handshake h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
          />
        </svg>
        <span
          class=""
        >
          Friends
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-friends-count"
        data-testid="typography"
      >
        10
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-tagged"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-tag h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <span
          class=""
        >
          Tagged
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-tagged-count"
        data-testid="typography"
      >
        5
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-collections"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-library h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6 4 14"
          />
          <path
            d="M12 6v14"
          />
          <path
            d="M8 8v12"
          />
          <path
            d="M4 4v16"
          />
        </svg>
        <span
          class=""
        >
          Collections
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-collections-count"
        data-testid="typography"
      >
        3
      </span>
    </button>
  </div>
</div>
`;

exports[`ProfilePageFilterBar - Snapshots > matches snapshot with zero stats 1`] = `
<div
  class="hidden h-fit w-(--filter-bar-width) flex-col self-start lg:flex sticky top-(--header-height)"
  data-testid="container"
>
  <div
    class="flex flex-col gap-0"
    data-testid="container"
  >
    <button
      aria-pressed="true"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-foreground m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-notifications"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bell h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.268 21a2 2 0 0 0 3.464 0"
          />
          <path
            d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
          />
        </svg>
        <span
          class=""
        >
          Notifications
        </span>
      </div>
      <span
        class="text-base font-medium text-foreground"
        data-cy="profile-filter-item-notifications-count"
        data-testid="typography"
      >
        0
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-posts"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-posts-count"
        data-testid="typography"
      >
        0
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-replies"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-circle h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719"
          />
        </svg>
        <span
          class=""
        >
          Replies
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-replies-count"
        data-testid="typography"
      >
        0
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-followers"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users-round h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 21a8 8 0 0 0-16 0"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"
          />
        </svg>
        <span
          class=""
        >
          Followers
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-followers-count"
        data-testid="typography"
      >
        0
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-following"
        data-testid="container"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="24"
          viewBox="0 0 20 20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.00016 17.5C5.00016 15.7319 5.70254 14.0362 6.95278 12.786C8.20303 11.5357 9.89872 10.8333 11.6668 10.8333M11.6668 10.8333C13.4349 10.8333 15.1306 11.5357 16.3809 12.786C17.6311 14.0362 18.3335 15.7319 18.3335 17.5M11.6668 10.8333C9.36564 10.8333 7.50016 8.96785 7.50016 6.66667C7.50016 4.36548 9.36564 2.5 11.6668 2.5C13.968 2.5 15.8335 4.36548 15.8335 6.66667C15.8335 8.96785 13.968 10.8333 11.6668 10.8333ZM1.66679 16.6666C1.66679 13.8583 3.33346 11.25 5.00012 9.99996C4.45227 9.58893 4.01419 9.0492 3.72465 8.42852C3.43511 7.80784 3.30303 7.12535 3.34011 6.44146C3.37719 5.75757 3.58227 5.09336 3.93723 4.50763C4.29218 3.92189 4.78605 3.43268 5.37512 3.08329"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <span
          class=""
        >
          Following
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-following-count"
        data-testid="typography"
      >
        0
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-friends"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart-handshake h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
          />
        </svg>
        <span
          class=""
        >
          Friends
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-friends-count"
        data-testid="typography"
      >
        0
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-tagged"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-tag h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <span
          class=""
        >
          Tagged
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-tagged-count"
        data-testid="typography"
      >
        0
      </span>
    </button>
    <button
      aria-pressed="false"
      class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left text-muted-foreground hover:text-foreground/80 m-0 h-full w-full items-start justify-between px-0 py-1"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      type="button"
    >
      <div
        class="flex items-center gap-2"
        data-cy="profile-filter-item-collections"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-library h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6 4 14"
          />
          <path
            d="M12 6v14"
          />
          <path
            d="M8 8v12"
          />
          <path
            d="M4 4v16"
          />
        </svg>
        <span
          class=""
        >
          Collections
        </span>
      </div>
      <span
        class="text-base font-medium text-muted-foreground"
        data-cy="profile-filter-item-collections-count"
        data-testid="typography"
      >
        0
      </span>
    </button>
  </div>
</div>
`;
